--- a/res/values/default.sass
+++ b/res/values/default.sass
@@ -164,6 +164,10 @@ $textOnAccent: #000000
     @extend .Text
     color: #efefef
 
+  &Dark
+    @extend .Text
+    color: $textOnAccent
+
 .Title
   @extend .Text
   font-weight: 700
